fix padding issue for text on small screens

--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@ body {
     line-height: 1.7;
     background: #ffffff;
     color: #d3fc42;
-    margin: 0px;
+    margin: 0;
     background-color: #000000; /* Used if the image is unavailable */
 }
 
@@ -182,6 +182,7 @@ a {
 #top {
     width: 100%;
     height: 100lvh;
+    overflow: hidden;
 }
 
 .top-text {
@@ -233,18 +234,20 @@ a {
 .container {
     position: relative;
     width: 100%;
-    height: auto; 
     margin: 0;
     background-color: rgba(0, 0, 0, 0.7);
 }
 
 .section {
+    box-sizing: border-box;
     width: 100%;
-    max-width: 1000px; 
-    min-height: calc(100vh - 250px);
+    max-width: 1000px;
+    min-height: calc(100vh - 200px);
     margin: auto;
     padding-top: 100px;
     padding-bottom: 100px;
+    padding-left: 60px;
+    padding-right: 60px;
 }
 
 .border {
